fix: dark mode in Card component

--- a/src/assets/styles/Collapse.module.css
+++ b/src/assets/styles/Collapse.module.css
@@ -3,13 +3,16 @@
         width: 100%;
         font-size: 13px;
         overflow: hidden;
-        border-radius: 5px;
     }
+    
     .title {
+        position: relative;
+        padding: 2px 0;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         font-size: 24px;
-        background-color: #fff;     
+        z-index: 15;  
     }
 
     .content {
@@ -20,9 +23,8 @@
         font-size: 14px;
         transform: translateY(-150px);
         transition: all 1250ms;
-        z-index: -1;
     }
     .text {
-        padding: 10px;
+        padding: 5px 10px 0 10px;
     }
 }
